# cmr-website

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  manage.py  pyproject.toml
CMR/: apps.py  asgi.py  checks.py  settings.py  urls.py  wsgi.py
accounts/: admin.py  factories.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
cmr_layouts/: admin.py  apps.py  factories.py  models.py  urls.py  views.py
cmr_pages/: apps.py
cmr_projects/: apps.py
events/: factories.py  models.py  urls.py
home/: views.py
locations/: factories.py  models.py  urls.py  views.py
mailinglists/: apps.py
management/commands/: seed_db.py
members/: models.py  urls.py  views.py
nrhs_pages/: apps.py
nrhs_projects/: apps.py
roadnames/: admin.py  apps.py  models.py  urls.py  views.py
static/assets/css/: fontawesome-all.min.css  main.css
static/assets/js/: main.js
static/assets/sass/: main.scss
templates/: base_pnl_rht.html  customer.html  customers.html  member.html  members.html  news.html  test.html
templates/account/: login.html
templates/base/: _orig_lft-sbar.html  _orig_no-sbar.html  _orig_rht-sbar.html  banner_sctn.html  debug_content.html  features_sctn.html  footer_sctn.html  header_nav.html  main.html  sbar_excerpts.html  sbar_highlights.html
tests/: test_checks.py  test_migrations.py
tests/management/: test_seed_db.py
